correções script